<resources>
    <string name="app_name">NOise</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Карта шумового загрязнения</string>
    <string name="nav_header_subtitle">ankudinovapol@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>
    <string name="menu_sense">Отслеживание</string>
    <string name="menu_gallery">Информация</string>
    <string name="menu_slideshow">Команда</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="BackToSettings">Info</string>
    <string name="mapOption">Open map</string>

    <string name="pick_place">Choose a place</string>
    <string name="noisemetr">Make noise circle</string>


    <string name="about_app">Проект подразумевает создание вспомогательной карты для отслеживания уровня шумового загрязнения с помощью сервисов ГИС</string>

    <string name="tishkName">Тишкина Мария </string>
    <string name="tishkProf">Работа с общественностью</string>


    <string name="ankName">Анкудинова Полина</string>
    <string name="ankProf">Android-разработчик</string>


    <string name="lovigName">Ловыгин Максим</string>
    <string name="lovigProf">Веб-разработчик</string>
    <string name="temaN">Щелчков Артём</string>
    <string name="temaProf">"Аналитик \nМониторинг информации "</string>
    <string name="yellowstr">Уровень шума в данной зоне нормальный для пребывания
        \n
    \nРекомендации: Постарайтесь находится в данной зоне , не более 5 часов
\nВлияние на самочувствие при длительном воздействии:
        \n
\n- Головные боли
\n- Звон в ушах
\n- Психологический дискомфорт</string>
    <string name="oranstr">Предупреждение! Данная зона не безопасна для нахождения здесь.
        \n
        \nРекомендации: Постарайтесь находится в данной зоне не более 2 часов 30 минут.
        \nВлияние на самочувствие при длительном воздействии:
        \n
        \n- Временное лишение слуха
        \n- Головные боли
        \n- Нарушение перефирического кровообращения
        \n- Раздражительность (вплоть до разрушения нервных клеток)</string>
    <string name="redstr">Внимание! Постарайтесь находится в данной зоне не более 40 минут.
        \n
    \nВлияние на самочувствие при длительном воздействии:
        \n
\n- Сильные головокружения
\n- Травмирование ушных клеток (могут лопнуть барабанные перепонки)
\n- Возможна контузия
\n- Разрушение нервной системы</string>
    <string name="msg_switch_network">Для корректной работы приложения необходимо включить геолокацию</string>
    <string name="text_with_link"><a href="https://still-basin-43476.herokuapp.com/">Веб-версия</a> </string>


    <!--    <string name="ankName">Анкудинова Полина</string>-->
    <!--    <string name="ankProf">Android-разработчик</string>-->

</resources>