<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/iconmap"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sense"
            android:icon="@drawable/bar_chart"
            android:title="@string/menu_sense" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/info_circle"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/group"
            android:title="@string/menu_slideshow" />
    </group>
</menu>