<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FabInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/tishk"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_marginTop="110dp"
            android:src="@drawable/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/lovig"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_marginTop="190dp"
            android:src="@drawable/oring"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tishk" />

        <ImageView
            android:id="@+id/ank"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_marginTop="190dp"
            android:src="@drawable/yellow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lovig" />

        <ImageView
            android:id="@+id/tema"
            android:layout_width="110dp"
            android:layout_height="100dp"
            android:layout_marginTop="110dp"
            android:src="@drawable/green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ank" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="left"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/tishk"
            app:layout_constraintStart_toEndOf="@+id/tishk"
            app:layout_constraintTop_toTopOf="@+id/tishk">

            <TextView
                android:id="@+id/tishkN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="120 - 160 Db"
                android:textColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.468"
                app:layout_constraintStart_toEndOf="@+id/tishk"
                app:layout_constraintTop_toBottomOf="@+id/text_gallery" />

            <TextView
                android:id="@+id/tishk2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/redstr"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.468"
                app:layout_constraintStart_toEndOf="@+id/tishk"
                app:layout_constraintTop_toBottomOf="@+id/tishkN" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="left"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/lovig"
            app:layout_constraintStart_toEndOf="@+id/lovig"
            app:layout_constraintTop_toTopOf="@+id/lovig">

            <TextView
                android:id="@+id/lovigN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="80 - 120 Db"
                android:textColor="@color/orange"
                app:layout_constraintBottom_toTopOf="@+id/lovig2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lovig" />

            <TextView
                android:id="@+id/lovig2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/oranstr"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toEndOf="@+id/lovig"
                app:layout_constraintTop_toTopOf="@+id/lovig" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="left"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/ank"
            app:layout_constraintStart_toEndOf="@+id/ank"
            app:layout_constraintTop_toTopOf="@+id/ank">


            <TextView
                android:id="@+id/ankudN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="40 - 80 Db"
                android:textColor="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ank"
                app:layout_constraintTop_toTopOf="@+id/ank" />

            <TextView
                android:id="@+id/ank3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/yellowstr"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toEndOf="@+id/ank"
                app:layout_constraintTop_toBottomOf="@+id/ankudN" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:gravity="left"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/tema"
            app:layout_constraintStart_toEndOf="@+id/tema"
            app:layout_constraintTop_toTopOf="@+id/tema">

            <TextView
                android:id="@+id/temaN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 0 - 40 Db"
                android:textColor="@color/dark_yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.468"
                app:layout_constraintStart_toEndOf="@+id/tishk"
                app:layout_constraintTop_toBottomOf="@+id/text_gallery" />

            <TextView
                android:id="@+id/tema2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="Уровень шума в данной зоне оптимальный для пребывания \nРекомендации : нет"
                android:textColor="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.468" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tema"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>